# HTTP-currency-exchange

./: README.md  README.txt
client/: CMakeLists.txt
client/src/: main.cpp
client/src/handler/: handler.cpp  handler.h
client/src/menu/: menu.cpp  menu.h
client/src/model/: broker.h
client/src/scenarios/: request_former.cpp  scenario.cpp  scenario.h
client/src/scenarious/: request_former.cpp  request_former.h  scenario.cpp  scenario.h
client/src/util/: literal_storage.h  util.cpp  util.h
server/: CMakeLists.txt  Dockerfile  conanfile.txt
server/src/: main.cpp  sdk.h
server/src/core/: server.cpp  server.h
server/src/handler/: handler.h  response_storage.cpp  response_storage.h  scenarios.cpp  scenarios.h
server/src/model/: broker.cpp  broker.h  exchange.cpp  exchange.h
server/src/util/: literal_storage.h  util.cpp  util.h
server/tests/: model_tests.cpp
